@@ -1,9 +1,9 @@
 #ifndef _QMMP_VERSION_H
 #define _QMMP_VERSION_H
 
-#define QMMP_VERSION 0.1.2
+#define QMMP_VERSION 0.2.0
 
-#define QMMP_STR_VERSION "0.1.2"
+#define QMMP_STR_VERSION "0.2.0"
 
 #define TCPSERVER_PORT_NUMBER 33000
 
